--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,22 @@ services:
         - 3000:3000
       volumes:
         - ./backend:/app
+      depends_on:
+        - postgres
+
+  postgres:
+    image: postgres:15
+    container_name: toro_postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - '5432:5432'
+    volumes: 
+      - toro_postgres:/var/lib/postgresql/data
+      - ./scripts/database/01_create_auth_database.sql:/docker-entrypoint-initdb.d/01_create_auth_database.sql
+
+volumes:
+  toro_postgres:
+    driver: local
